ENG-3900 widgets v1 still use the simple code without appending the bundle id