@@ -10,6 +10,7 @@ import static org.mockito.Mockito.when;
 import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
 import java.io.File;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -66,7 +67,6 @@ class WidgetProcessorTest extends BaseProcessorTest {
     @Test
     void canProcessDescriptorV1() throws IOException {
 
-        when(bundleReader.getBundleUrl()).thenReturn(BundleInfoStubHelper.GIT_REPO_ADDRESS);
         String widgDescrFile = "src/test/resources/bundle/widgets/my_widget_descriptor.yaml";
 
         final ComponentSpecDescriptor spec = new ComponentSpecDescriptor();
@@ -79,7 +79,7 @@ class WidgetProcessorTest extends BaseProcessorTest {
 
         WidgetDescriptor actual = installableList.get(0).getRepresentation();
         WidgetDescriptor expected = yamlMapper.readValue(new File(widgDescrFile), WidgetDescriptor.class);
-        expected.setCode("todomvc_widget-77b2b10e");
+        expected.setCode("todomvc_widget");
 
         assertOnWidgetDescriptors(actual, expected);
 
@@ -218,10 +218,8 @@ class WidgetProcessorTest extends BaseProcessorTest {
     }
 
     @Test
-    void shouldAddWidgetCodeWhileComposingReportables() throws IOException {
-        when(bundleReader.getBundleUrl()).thenReturn(BundleInfoStubHelper.GIT_REPO_ADDRESS);
-
-        final List<String> widgetsToProcess = List.of("widget_descriptor_v1.yaml", "widget_descriptor_v5.yaml");
+    void shouldNotAddBundleIdToWidgetCodeWhileComposingReportablesInBundleV1() throws IOException {
+        final List<String> widgetsToProcess = Collections.singletonList("widget_descriptor_v1.yaml");
         ComponentSpecDescriptor componentSpecDescriptor = new ComponentSpecDescriptor().setWidgets(widgetsToProcess);
         when(bundleReader.readBundleDescriptor()).thenReturn(
                 BundleStubHelper.stubBundleDescriptor(componentSpecDescriptor));
@@ -229,6 +227,24 @@ class WidgetProcessorTest extends BaseProcessorTest {
         WidgetDescriptor widgetDescriptor1 = new WidgetDescriptor().setCode(BundleStubHelper.BUNDLE_CODE);
         when(bundleReader.readDescriptorFile("widget_descriptor_v1.yaml", WidgetDescriptor.class))
                 .thenReturn(widgetDescriptor1);
+
+        final WidgetProcessor widgetProcessor = new WidgetProcessor(new EntandoCoreClientTestDouble(),
+                new WidgetTemplateGeneratorServiceDouble(), validator);
+
+        final Reportable reportable = widgetProcessor.getReportable(bundleReader, widgetProcessor);
+
+        assertThat(reportable.getCodes()).hasSize(1);
+        assertThat(reportable.getCodes().get(0)).isEqualTo(BundleStubHelper.BUNDLE_CODE);
+    }
+
+    @Test
+    void shouldAddBundleIdToWidgetCodeWhileComposingReportablesInBundleV5() throws IOException {
+        when(bundleReader.getBundleUrl()).thenReturn(BundleInfoStubHelper.GIT_REPO_ADDRESS);
+
+        final List<String> widgetsToProcess = Collections.singletonList("widget_descriptor_v5.yaml");
+        ComponentSpecDescriptor componentSpecDescriptor = new ComponentSpecDescriptor().setWidgets(widgetsToProcess);
+        when(bundleReader.readBundleDescriptor()).thenReturn(
+                BundleStubHelper.stubBundleDescriptor(componentSpecDescriptor));
 
         WidgetDescriptor widgetDescriptor5 = new WidgetDescriptor().setName(BundleStubHelper.BUNDLE_CODE);
         widgetDescriptor5.setDescriptorVersion("v5");
@@ -241,10 +257,8 @@ class WidgetProcessorTest extends BaseProcessorTest {
 
         final Reportable reportable = widgetProcessor.getReportable(bundleReader, widgetProcessor);
 
-        assertThat(reportable.getCodes()).hasSize(2);
+        assertThat(reportable.getCodes()).hasSize(1);
         assertThat(reportable.getCodes().get(0)).isEqualTo(
-                BundleStubHelper.BUNDLE_CODE + "-" + BundleInfoStubHelper.GIT_REPO_ADDRESS_8_CHARS_SHA);
-        assertThat(reportable.getCodes().get(1)).isEqualTo(
                 BundleStubHelper.BUNDLE_CODE + "-" + BundleInfoStubHelper.GIT_REPO_ADDRESS_8_CHARS_SHA);
     }
 
